--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "0797caaa-6c0b-427c-bed0-24d13dc90f98"
 authors = ["Yuki Nagai <cometscome@gmail.com>"]
 version = "1.0.0-DEV"
 
+[deps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
 [compat]
 julia = "1.9"
 
