--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Wiltingerderivative"
 uuid = "0797caaa-6c0b-427c-bed0-24d13dc90f98"
 authors = ["Yuki Nagai <cometscome@gmail.com>"]
-version = "1.0.0-DEV"
+version = "0.0.1"
 
 [deps]
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
